# SoundApp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/audioItems/: Artist.cpp  AudioItem.cpp  Customer.cpp  Date.cpp  Invoice.cpp  MainPlatform.cpp  Playlist.cpp  Podcast.cpp  Song.cpp  Subscription.cpp  User.cpp
src/headers/: Artist.h  AudioItem.h  Customer.h  Date.h  Invoice.h  MainPlatform.h  Playlist.h  Podcast.h  Song.h  Subscription.h  User.h
